--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="doctor_information">Doctor Information:</string>
     <string name="enter_your_reason">Enter your reason</string>
     <string name="documents">Documents</string>
+    <string name="download">Download</string>
 </resources>
